@@ -116,6 +116,10 @@ unsigned char account_getConfirmationRequired(const struct oidc_account* p) {
   return p ? p->mode & ACCOUNT_MODE_CONFIRM : 0;
 }
 
+unsigned char account_getNoWebServer(const struct oidc_account* p) {
+  return p ? p->mode & ACCOUNT_MODE_NO_WEBSERVER : 0;
+}
+
 void account_setIssuerUrl(struct oidc_account* p, char* issuer_url) {
   if (!p->issuer) {
     p->issuer = secAlloc(sizeof(struct oidc_issuer));
@@ -287,6 +291,10 @@ void account_setCodeChallengeMethod(struct oidc_account* p,
 
 void account_setConfirmationRequired(struct oidc_account* p) {
   p->mode |= ACCOUNT_MODE_CONFIRM;
+}
+
+void account_setNoWebServer(struct oidc_account* p) {
+  p->mode |= ACCOUNT_MODE_NO_WEBSERVER;
 }
 
 int account_refreshTokenIsValid(const struct oidc_account* p) {
