@@ -89,7 +89,7 @@ void handleGen(struct oidc_account* account, const struct arguments* arguments,
   pwe_setType(&pw, type);
   char* pw_str = passwordEntryToJSONString(&pw);
   char* res    = ipc_cryptCommunicate(REQUEST_GEN, json, flow, pw_str,
-                                   arguments->customScheme | arguments->manual);
+                                   arguments->customScheme);
   secFree(flow);
   secFree(json);
   secFree(pw_str);
