@@ -212,6 +212,7 @@ oidc-agent (2.3.0-dev) UNRELEASED; urgency=medium
   * Added possibility to complete account generation with the url a user is
     redirected to
   * Added support for custom uri scheme redirect uris
+  * Added support for doing the auth code flow without a webserver
   * Fixed possible seg faults
   * Fixed a seg fault when locking an agent that has a public client loaded
   * Added public clients for HBP, Elixir
